--- a/.github/workflows/tracker.yaml
+++ b/.github/workflows/tracker.yaml
@@ -1,5 +1,8 @@
 name: Minecraft Stats Tracker
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron: '*/10 * * * *' # Every 10 minutes
   workflow_dispatch: # Allows manual testing
